--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <!--按钮-->
+    <dimen name="bt_match_margin">12dp</dimen>
+    <dimen name="bt_main_radius">5dp</dimen>
+
 </resources>
