--- a/pickerview/src/main/res/layout/pickerview_time.xml
+++ b/pickerview/src/main/res/layout/pickerview_time.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <include
-        layout="@layout/include_pickerview_topbar"
+        layout="@layout/include_pickerview_topbar2"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/pickerview_topbar_height"/>
+        android:layout_height="@dimen/pickerview_topbar_height" />
 
     <LinearLayout
         android:id="@+id/timepicker"
@@ -20,19 +21,25 @@
             android:id="@+id/year"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            app:pickerview_textColorCenter="#4c4c4e"
+            app:pickerview_textColorOut="#b2b2b2" />
 
         <com.bigkoo.pickerview.lib.WheelView
             android:id="@+id/month"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1.1" />
+            android:layout_weight="1.1"
+            app:pickerview_textColorCenter="#4c4c4e"
+            app:pickerview_textColorOut="#b2b2b2" />
 
         <com.bigkoo.pickerview.lib.WheelView
             android:id="@+id/day"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1.1" />
+            android:layout_weight="1.1"
+            app:pickerview_textColorCenter="#4c4c4e"
+            app:pickerview_textColorOut="#b2b2b2" />
 
         <com.bigkoo.pickerview.lib.WheelView
             android:id="@+id/hour"
